--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
-<h1>Hi Mom!</h1>
-<h2>I love you ❤️</h2>
+<h1>This is my website!</h1>
+<h2>Please enjoy the following assortment of classic gifs as I decide what I want to put here.</h2>
+
+<img src="./images/under_construction.gif" height="81" width="216">
+<img src="./images/constructionguy.gif" height="81" width="216">
